[build-system]
requires = [
    "setuptools >= 45",
    "setuptools_scm >= 6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "htsworkflow/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]

envlist=py{38,39,310,311}-django{40}-{sqlite}
skip_missing_interpreters=True

[testenv]
commands=python -b -Wall manage.py test -v 2
setenv =
  PYTHONWARNINGS=all
  sqlite: DJANGO_SETTINGS_MODULE=htsworkflow.settings.sqlite
  psql: DJANGO_SETTINGS_MODULE=htsworkflow.settings.psql
deps=
  django40: Django>=4.0,<4.1
  django32: Django>=3.2,<3.3
extras =
  test
"""
