[metadata]
name = htsworkflow
description = Utilities to help manage high-throughput-sequencing
long_description = file: README.txt
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD-3
author = Diane Trout, Brandon King
author_email = diane@caltech.edu
project_urls =
   Source = https://github.com/detrout/htsworkflow
   Tracker = https://github.com/detrout/htsworkflow

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
include_package_data = True
install_requires =
    django >=3.1,<3.2
    lxml
    numpy
    pandas
    keyring
    jsonschema
    requests
    six
    pytz
    encoded_client
    rdflib
    pyRdfa3
test_require =
    requests_mock
    factory_boy

[options.entry_points]
console_scripts =

[options.extras_require]
test =
    requests_mock
    factory_boy
